# slowpoke

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.dev.toml.example  Secrets.toml.example  Shuttle.toml  docker-compose.example.yml  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.test.json
.github/workflows/: main.yml
scripts/: live-smoke.ts
src/: config.ts  deploy-commands.ts  index.ts  main.rs  main.ts
src/chime-ins/: deez-nuts.ts
src/commands/: chat.rs  chat.ts  eight-ball.ts  eight_ball.rs  imagine.rs  imagine.ts  index.ts  mod.rs  ping.rs  ping.ts  prompt.rs  prompt.ts  remix.rs  remix.ts  roll.ts  tfti.rs  tfti.ts
src/models/: chime-in.ts  commands.ts
src/utils/: activity-manager.ts  activity_manager.rs  codex-lb-image-client.ts  codex-text-client.ts  color-provider.ts  command-registrar.ts  gemini-client.ts  gemini-imagen-client.ts  gemini_client.rs  gemini_imagen_client.rs  image-client.ts  image-downloader.ts  logger.ts  mod.rs  openai-client.ts  openai-image-client.ts  text-generation-client.ts  web-tools.ts
test/: config.test.ts  image-client.test.ts  image-downloader.test.ts  logger.test.ts  openai-client.test.ts  web-tools.test.ts
