[package]
name = "slowpoke"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.44.1", features = ["full"] }
rand = "0.8.5"
shuttle-runtime = { version = "0.55.0", features = ["setup-otel-exporter"] }
shuttle-serenity = "0.55.0"
tracing = "0.1.41"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
text-splitter = { version = "0.27.0", features = ["markdown"] }
base64 = "0.22.1"
